[Mac] Fix for fullscreen toolbar dropdown

Remove a line that was setting the toolbar fraction to 0, when the
fullscreen toolbar is toggled between show and hidden. This was
causing the toolbar to have incorrect toolbar fraction values.

BUG=634981

Review-Url: https://codereview.chromium.org/2240293003
Cr-Commit-Position: refs/heads/master@{#411799}